# lspace

./: .travis.yml  Cargo.toml  README.md  gtk_lspace_test.py
benches/: element_ref_type.rs  element_ref_type_b.rs
examples/: json_viewer.rs  multiline_editor.rs  render_rust.rs  simple_editor.rs  very_simple_editor.rs  w_and_p.rs
pylspace/: lspace_area.py  lspace_ffi.py  pres.py  pyrs.py
src/lib/: lib.rs
src/lib/lspace/: lspace_area.rs  lspace_widget.rs  mod.rs  pyrs.rs
src/lib/lspace/elements/: bin.rs  border_element.rs  column.rs  container.rs  container_sequence.rs  element.rs  element_ctx.rs  element_layout.rs  flow.rs  mod.rs  root_element.rs  row.rs  text_element.rs
src/lib/lspace/geom/: affinexform2.rs  bbox2.rs  colour.rs  fastminmax.rs  mod.rs  point2.rs  vector2.rs
src/lib/lspace/graphics/: bbox2.rs  border.rs  mod.rs  point2.rs  rect2d.rs  vector2.rs
src/lib/lspace/input/: input_system.rs  inputmodifier.rs  keyboard.rs  mod.rs  pointer.rs
src/lib/lspace/layout/: flow_layout.rs  horizontal_layout.rs  lalloc.rs  lbox.rs  lreq.rs  mod.rs  vertical_layout.rs
src/lib/lspace/pres/: mod.rs  pres.rs  primitive.rs  richtext.rs
