[package]
name = "lspace"
version = "0.0.1"
authors = [ "Geoffrey French <brittix1023@gmail.com>" ]

[dependencies]
time = "0.1"
rand = "0.3"
gdk = { git = "https://github.com/gtk-rs/gdk" }
gtk = { git = "https://github.com/gtk-rs/gtk" }
glib = { git = "https://github.com/gtk-rs/glib" }
cairo-rs = { git = "https://github.com/gtk-rs/cairo" }
cairo-sys-rs = { git = "https://github.com/gtk-rs/cairo" }

[dev-dependencies]
hyper = "*"
regex = "*"

[profile.bench]
opt-level = 3
debug = true

[lib]
name = "lspace"
path = "src/lib/lspace/mod.rs"
