[package]
name = "lspace"
version = "0.0.1"
authors = [ "Geoffrey French <brittix1023@gmail.com>" ]

[dependencies]
time = "0.1"
rand = "0.3"
cairo-rs = "*"
cairo-sys-rs = "*"
libc = "*"
glib = "*"
gdk = "*"
gtk = "*"

[dev-dependencies]
regex = "*"
rustc-serialize = "*"

[profile.bench]
opt-level = 3
debug = true

[lib]
name = "lspace"
path = "src/lib/lspace/mod.rs"
